--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,8 @@
   --oceancolor: #2196f3;
   --whitecolor: white;
   --slatecolor: #434455;
+  --cornflowercolor: #e7e9fc;
+  --cloudcolor: #f4f4fd;
 }
 
 .link-logo {
@@ -88,7 +90,7 @@
 
 .btn.primary:hover,
 .btn.primary:focus {
-  background-color: hotpink;
+  background-color: teal;
 }
 
 .desclist.titlelist {
@@ -122,10 +124,11 @@
 
 .footerbg {
   background-color: var(--navyblue);
+  padding-left: 15px;
 }
 
-.lastword {
-  color: white;
+.footer {
+  color: var(--cloudcolor);
   width: 265px;
   height: 70px;
   top: 3300px;
