--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,9 @@ body {
 .header-address-link:focus {
   color: var(--oceancolor);
 }
+.current {
+  color: var(--iriscolor);
+}
 
 .header-link {
   color: var(--navyblue);
@@ -62,6 +65,14 @@ body {
 .header-link:hover,
 .header-link:focus {
   color: var(--oceancolor);
+}
+
+.current {
+  color: var(--iriscolor);
+}
+
+.header-link:active {
+  color: red;
 }
 
 .hero-section {
@@ -105,6 +116,7 @@ body {
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.4px;
+  color: var(--navyblue);
 }
 
 .bottom-text {
@@ -114,6 +126,7 @@ body {
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.32px;
+  color: var(--slatecolor);
 }
 
 .section-title {
@@ -126,4 +139,30 @@ body {
   line-height: 40px;
   letter-spacing: 0.72px;
   text-transform: capitalize;
+}
+
+/* CSS for Portfolio */
+.menu-item {
+  border-radius: 4px;
+  border: 1px solid var(--cornflower, #e7e9fc);
+  background: var(--cloud, #f4f4fd);
+  color: var(--iris, #4d5ae5);
+  font-family: inherit;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.64px;
+}
+
+.menu-item:hover {
+  cursor: pointer;
+}
+
+.active {
+  border-radius: 4px;
+  background: var(--ocean, #404bbf);
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
+    0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
+  color: var(--whitecolor);
 }
