--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,8 @@ body {
   letter-spacing: 0.64px;
   border: none;
   cursor: pointer;
+  font-family: inherit;
+  font-size: 16px;
 }
 
 .hero-button:hover,
@@ -147,10 +149,11 @@ body {
   font-weight: 500;
   letter-spacing: 0.64px;
   cursor: pointer;
+  font-size: 16px;
 }
 
 .active {
-  background: var(--iriscolor);
+  background: var(--oceancolor);
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
     0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
   color: var(--whitecolor);
@@ -158,9 +161,10 @@ body {
 }
 
 .filter-item:hover {
-  background: var(--ocean, #404bbf);
+  background: var(--oceancolor);
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
     0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
   color: var(--whitecolor);
   border-color: var(--oceancolor);
+  font-family: inherit;
 }
